download css and js

--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>index</title>
     <!-- Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.bootcss.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/myStyle.css">
     <style>
 
         .header-info {
             margin: 0;
             width: 100%;
-            height: auto;
-            background-size: cover;
-            background: url("images/back_img.jpg") no-repeat;
+            /*height: auto;*/
+            background-size: 100% auto;
+            background: url("images/back_img.jpg") repeat-x;
         }
     </style>
 
@@ -414,8 +414,13 @@
         </div>
 
     </div>
+
+<!--    页脚-->
+    <div class="row clearfix">
+
+    </div>
 </div>
-<script src="https://cdn.bootcss.com/jquery/2.1.1/jquery.min.js"></script>
-<script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+<script src="js/jquery.min.js"></script>
+<script src="js/bootstrap.min.js"></script>
 </body>
 </html>
