--- a/index.html
+++ b/index.html
@@ -3,10 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+
     <title>index</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/myStyle.css">
+    <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
+    <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
+    <!--[if lt IE 9]>
+    <script src="js/html5shiv.min.js"></script>
+    <script src="js/respond.min.js"></script>
+    <![endif]-->
+    <script src="js/jquery.min.1.9.1.js"></script>
+    <script src="js/bootstrap.min.js"></script>
     <style>
 
         .header-info {
@@ -15,6 +25,16 @@
             /*height: auto;*/
             background-size: 100% auto;
             background: url("images/back_img.jpg") repeat-x;
+        }
+
+         img.shadow {
+             -webkit-box-shadow: 0 0 4px 1px rgba(0, 0, 0, .5);
+             box-shadow: 0 0 5px 2px rgba(0, 0, 0, .5);
+         }
+        .feet-1 {
+            margin:15px 0 0 0;
+            padding:23px;
+            background: #0583CA;
         }
     </style>
 
@@ -150,7 +170,7 @@
                 <div class="col-md-1">
                 </div>
                 <!--                文章列表1-->
-                <div class="col-lg-6 col-md-6 col-sm-6 border1">
+                <div class="col-lg-6 col-md-6 col-sm-6 border1 ">
                     <p class="my-title"><span class="glyphicon glyphicon-th-list"></span> 领导活动</p>
                     <ul id="article-list-1" class="list-group">
 
@@ -182,9 +202,9 @@
 
             </div>
             <div class="row clearfix">
-                <div class="col-lg-12 col-md-12" style="position: relative;margin-top: 25px ;padding-bottom: 30px">
+                <div class="col-lg-12 col-md-12 " style="position: relative;margin-top: 25px ;padding-bottom: 30px">
                     <a href="#">
-                        <img class="img-rounded" style="padding: 0" width="100%" src="images/xuexiqiangguo.jpg"
+                        <img class="img-rounded shadow" style="padding: 0" width="100%" src="images/xuexiqiangguo.jpg"
                              alt="学习强国">
                     </a>
                 </div>
@@ -198,7 +218,7 @@
         <div class="col-md-9  col-lg-9 column">
             <div class="row clearfix">
                 <!--                栏目1-->
-                <div class="col-md-6  col-lg-6 column">
+                <div class="col-md-6  col-lg-6 column ">
                     <p class="my-title">栏目1</p>
                     <ul class="nav nav-tabs" style="background-color: #DDFFFF">
                         <li id="channel-1" class="active"><a href="#">子栏目1</a></li>
@@ -232,7 +252,7 @@
                     </ul>
                 </div>
                 <!--                栏目2-->
-                <div class="col-md-6 col-lg-6 column">
+                <div class="col-md-6 col-lg-6 column ">
                     <p class="my-title">栏目2</p>
                     <ul class="nav nav-tabs" style="background-color: #DDFFFF">
                         <li id="channel-2" class="active"><a href="#">子栏目1</a></li>
@@ -268,7 +288,7 @@
             </div>
             <div class="row clearfix">
                 <!--            栏目3-->
-                <div class="col-md-6  col-lg-6 column">
+                <div class="col-md-6  col-lg-6 column ">
                     <p class="my-title">栏目3</p>
                     <ul class="nav nav-tabs" style="background-color: #DDFFFF">
                         <li id="channel-3" class="active"><a href="#">子栏目1</a></li>
@@ -302,7 +322,7 @@
                     </ul>
                 </div>
                 <!--            栏目4-->
-                <div class="col-md-6 col-lg-6 column">
+                <div class="col-md-6 col-lg-6 column ">
                     <p class="my-title">栏目4</p>
                     <ul class="nav nav-tabs" style="background-color: #DDFFFF">
                         <li id="channel-4" class="active"><a href="#">子栏目1</a></li>
@@ -338,7 +358,7 @@
             </div>
             <div class="row clearfix">
                 <!--                        栏目5-->
-                <div class="col-md-6  col-lg-6 column">
+                <div class="col-md-6  col-lg-6 column ">
 
                     <p class="my-title">栏目5</p>
                     <ul class="nav nav-tabs" style="background-color: #DDFFFF">
@@ -414,13 +434,71 @@
         </div>
 
     </div>
-
-<!--    页脚-->
+</div>
+<hr style="   height: 1px;border: none; background-color: #CCCCCC">
+<div class="container">
+<!--    <p>导航链接：</p>-->
     <div class="row clearfix">
+        <div class="col-lg-1 col-md-1">
+            <p>链接导航</p>
+        </div>
+        <div class="col-lg-2 col-md-2">
+            <div class="dropdown">
+                <button type="button" class="btn dropdown-toggle" data-toggle="dropdown">银保监会网站
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu " role="menu" aria-labelledby="dropdownMenu1">
+                    <div class="dropup">
+                        <li role="presentation">
+                            <a role="menuitem" tabindex="-1" href="http://10.1.3.101/">银保监会内网</a>
+                        </li>
+                        <li role="presentation">
+                            <a role="menuitem" tabindex="-1" href="http://10.1.3.67/">银保监会内网（旧）</a>
+                        </li>
+                        <li role="presentation">
+                            <a role="menuitem" tabindex="-1" href="http://10.1.3.15">内网邮件系统</a>
+                        </li>
+                        <li role="presentation">
+                            <a role="menuitem" tabindex="-1" href="http://10.1.3.58/zh-hans/default.htm">总会防病毒网站</a>
+                        </li>
+                        <li role="presentation">
+                            <a role="menuitem" tabindex="-1" href="http://10.1.3.67/upPass/uppass.jsp">综合办公平台密码修改</a>
+                        </li>
+                    </div>
+
+                </ul>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-2">
+            <div class="btn-group dropup">
+                <button type="button" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">
+                    银保监会应用系统
+                    <span class="caret"></span>
+                </button>
+                <ul class="dropdown-menu" role="menu">
+                    <li><a href="http://10.1.17.226/acts/">统一用户管理系统</a></li>
+                    <li><a href="http://10.1.5.50/index.jsp">银监会财务系统系统</a></li>
+                    <li><a href="http://10.1.5.67:9797/zcgl">行政事业单位资产管理信息系统</a></li>
+                    <li><a href="http://10.1.162.62:9080/main/index.jsp"> 客户风险统计系统</a></li>
+                    <li><a href="http://19.10.250.30/nacao/login.jsp">银码信息共享系统</a></li>
+                    <li><a href="http://10.1.2.12/SMMIS/loginAction.do">机构董事和高管管理系统</a></li>
+                    <li><a href="http://10.1.2.12/IMIS/login/login.html">金融机构及市场准入管理系统</a></li>
+                    <li><a href="http://10.1.17.51:9080/licence/">法规信息管理系统</a></li>
+                    <li><a href="http://10.1.17.120/foreground/index.do">银行监管业务知识学习考试平台</a></li>
+                    <li><a href="http://10.1.5.82:7001/system/user/login.do">多媒体录播服务器</a></li>
+
+                </ul>
+            </div>
+        </div>
+        <div class="col-lg-2 col-md-2"></div>
+        <div class="col-lg-2 col-md-2"></div>
+        <div class="col-lg-2 col-md-2"></div>
+        <div class="col-lg-1 col-md-1"></div>
 
     </div>
 </div>
-<script src="js/jquery.min.js"></script>
-<script src="js/bootstrap.min.js"></script>
+<div class="feet-1">
+ copyright@twikura.com
+</div>
 </body>
 </html>
