--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-
+    <meta name="author" content="Twikura.com">
     <title>index</title>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
@@ -543,7 +543,7 @@
     </div>
 </div>
 <div class="feet-1">
- copyright@twikura.com
+    <p>Copyright@twikura.com</p>
 </div>
 </body>
 </html>
