--- a/index.html
+++ b/index.html
@@ -19,23 +19,12 @@
     <script src="js/jquery.min.1.9.1.js"></script>
     <script src="js/bootstrap.min.js"></script>
     <style>
-
         .header-info {
             margin: 0;
             width: 100%;
             /*height: auto;*/
             background-size: 100% auto;
             background: url("images/back_img.jpg") repeat-x;
-        }
-
-         img.shadow {
-             -webkit-box-shadow: 0 0 4px 1px rgba(0, 0, 0, .5);
-             box-shadow: 0 0 5px 2px rgba(0, 0, 0, .5);
-         }
-        .feet-1 {
-            margin:15px 0 0 0;
-            padding:23px;
-            background: #0583CA;
         }
     </style>
 
@@ -543,7 +532,7 @@
     </div>
 </div>
 <div class="feet-1">
-    <p>Copyright@twikura.com</p>
+    <p class="text-center small" style="color: whitesmoke"> copyright@twikura.com</p>
 </div>
 </body>
 </html>
