搞错了，这个才是，忽略上一个

--- a/index.html
+++ b/index.html
@@ -531,7 +531,7 @@
 
     </div>
 </div>
-<div class="feet-1">
+<div class="feet-box">
     <p class="text-center small" style="color: whitesmoke"> copyright@twikura.com</p>
 </div>
 </body>
