--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
     </div>
 </div>
 <div class="feet-box">
-    <p class="text-center small" style="color: whitesmoke"> copyright@twikura.com</p>
+    <p class="text-center small" style="color: whitesmoke"> Copyright@twikura.com</p>
 </div>
 </body>
 </html>
