--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/myStyle.css">
-<!--    <link rel="stylesheet" href="css/font-awesome.min.css">-->
+    <!--    <link rel="stylesheet" href="css/font-awesome.min.css">-->
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -210,7 +210,7 @@
                 <!--                栏目1-->
                 <div class="col-md-6  col-lg-6 column ">
                     <p class="my-title "><span class="glyphicon glyphicon-list-alt">&ensp;</span> 栏目1</p>
-                    <ul class="nav nav-tabs " style="background-color: #DDFFFF">
+                    <ul class="nav nav-tabs ">
                         <li id="channel-1" class="active "><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
@@ -242,34 +242,34 @@
                     </ul>
                 </div>
                 <!--                栏目2-->
-                <div class="col-md-6 col-lg-6 column ">
+                <div id="channel-2" class="col-md-6 col-lg-6 column ">
                     <p class="my-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目2</p>
-                    <ul class="nav nav-tabs" style="background-color: #DDFFFF">
-                        <li id="channel-2" class="active"><a href="#">子栏目1</a></li>
+                    <ul class="nav nav-tabs">
+                        <li  class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
                     </ul>
                     <ul class="list-group">
 
-                        <a href="#" class="list-group-item " style="font-size: 16px">
+                        <a href="#" class="list-group-item">
                             <span class="badge badge-primary badge-date">11-11</span>
-                            test1
+                           test1 测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试测试
                         </a>
 
-                        <a href="#" class="list-group-item" style="font-size: 16px">
+                        <a href="#" class="list-group-item text-nowrap channel-text" >
                             <span class="badge badge-primary badge-date">11-11</span>
                             test2
                         </a>
-                        <a href="#" class="list-group-item " style="font-size: 16px">
+                        <a href="#" class="list-group-item text-nowrap channel-text" >
                             <span class="badge badge-primary badge-date">11-11</span>
                             test3
                         </a>
 
-                        <a href="#" class="list-group-item " style="font-size: 16px">
+                        <a href="#" class="list-group-item text-nowrap channel-text">
                             <span class="badge badge-primary badge-date">11-11</span>
                             test4
                         </a>
-                        <a href="#" class="list-group-item " style="font-size: 16px">
+                        <a href="#" class="list-group-item text-nowrap channel-text" >
                             <span class="badge badge-primary badge-date">11-11</span>
                             test5
                         </a>
@@ -278,10 +278,10 @@
             </div>
             <div class="row clearfix">
                 <!--            栏目3-->
-                <div class="col-md-6  col-lg-6 column ">
+                <div id="channel-3" class="col-md-6  col-lg-6 column ">
                     <p class="my-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目3</p>
-                    <ul class="nav nav-tabs" style="background-color: #DDFFFF">
-                        <li id="channel-3" class="active"><a href="#">子栏目1</a></li>
+                    <ul class="nav nav-tabs" >
+                        <li  class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
                     </ul>
@@ -314,7 +314,7 @@
                 <!--            栏目4-->
                 <div class="col-md-6 col-lg-6 column ">
                     <p class="my-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目4</p>
-                    <ul class="nav nav-tabs" style="background-color: #DDFFFF">
+                    <ul class="nav nav-tabs">
                         <li id="channel-4" class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
@@ -351,7 +351,7 @@
                 <div class="col-md-6  col-lg-6 column ">
 
                     <p class="my-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目5</p>
-                    <ul class="nav nav-tabs" style="background-color: #DDFFFF">
+                    <ul class="nav nav-tabs" >
                         <li id="channel-5" class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
@@ -385,7 +385,7 @@
                 <!--                栏目6-->
                 <div class="col-md-6 col-lg-6 column">
                     <p class="my-title"><span class="glyphicon glyphicon-list-alt">&ensp;</span>栏目6</p>
-                    <ul class="nav nav-tabs" style="background-color: #DDFFFF">
+                    <ul class="nav nav-tabs">
                         <li id="channel-6" class="active"><a href="#">子栏目1</a></li>
                         <li><a href="#">子栏目2</a></li>
                         <li><a href="#">子栏目3</a></li>
@@ -420,17 +420,38 @@
 
         </div>
         <!--        侧栏-->
-        <div class="col-md-3  col-lg-3 column">
+        <div class="col-md-3  col-lg-3 column"  style="background: white;margin-top: 30px">
+            <div class="row clearfix side-title">
+                <div class="col-md-6 ">
+                    <p class="text-left text-primary" style="font-size: 20px; margin: 2px 2px 0 0">最新更新</p>
+
+                </div>
+                <div class="col-md-6">
+                    <p class="text-right" style="margin: 5px 0 0 0">更多</p>
+                </div>
+            </div>
+            <div class="row clearfix">
+                <div class="col-md-12 col-lg-12">
+                    <ul id="side-content" class="list-group">
+
+                            <a class="list-group-item " href="#" >111 </a>
+                        <a class="list-group-item " href="#" >111</a>
+                        <a class="list-group-item " href="#" >111</a>
+                        <a class="list-group-item " href="#" >111</a>
+                        <a class="list-group-item " href="#" >111</a>
+                    </ul>
+                </div>
+            </div>
         </div>
 
     </div>
 </div>
 <hr style="   height: 1px;border: none; background-color: #CCCCCC">
 <div class="container">
-<!--    <p>导航链接：</p>-->
+    <!--    <p>导航链接：</p>-->
     <div class="row clearfix">
         <div class="col-lg-1 col-md-1">
-<!--            <p>链接导航</p>-->
+            <!--            <p>链接导航</p>-->
         </div>
         <div class="col-lg-2 col-md-2">
             <div class="btn-group dropup">
@@ -532,7 +553,7 @@
     </div>
 </div>
 <div class="feet-box">
-    <p class="text-center small" style="color: whitesmoke"> Copyright@twikura.com</p>
+    <p class="text-center small" style="color: whitesmoke"> Copyright &copy; 2021 Modify 中国银行保险监督管理委员会昭通监管分局</p>
 </div>
 </body>
 </html>
